
- Bug #1460340: ``random.sample(dict)`` failed in various ways.  Dicts
  aren't officially supported here, and trying to use them will probably
  raise an exception some day.  But dicts have been allowed, and "mostly
  worked", so support for them won't go away without warning.

- Bug #1472827: correctly escape newlines and tabs in attribute values in
  the saxutils.XMLGenerator class.


Tools/Demos
-----------

Build
-----

- Bug #1439538: Drop usage of test -e in configure as it is not portable.

- Bug #1502728: Correctly link against librt library on HP-UX.

- OpenBSD 3.9 is now supported.

- Test for sys/statvfs.h before including it, as statvfs is present
  on some OSX installation, but its header file is not.

- Fix test_long failure on Tru64 with gcc by using -mieee gcc option.

Documentation
-------------

- Bug #1541682: Fix example in the "Refcount details" API docs.
  Additionally, remove a faulty example showing PySequence_SetItem applied
  to a newly created list object and add notes that this isn't a good idea.

- Clarified documentation for tp_as_buffer->bf_getcharbuffer.

- Bug #1337990: clarified that ``doctest`` does not support examples
  requiring both expected output and an exception.

Tests
-----

- Bug #1535182: really test the xreadlines() method of bz2 objects.

- Patch #1529686: test_iterlen and test_email_codecs are now actually
  run by regrtest.py.


What's New in Python 2.4.3?
===========================

*Release date: 29-MAR-2006*

Core and builtins
-----------------

- A few reference leaks were squished.

- A threading issue that caused random segfaults on some platforms from
  the testsuite was fixed in test_capi.

- Reverted fix for Bug #1379994: Builtin unicode_escape and
  raw_unicode_escape codec now encodes backslash correctly.
  This caused another issue for unicode repr strings being double-escaped
  (SF Bug #1459029). Correct fix will be in 2.5, but is too risky for 2.4.3.

Extension Modules
-----------------
